server/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-gateway
spec:
  selector:
    app: chat-gateway
  ports:
    - port: 1234
      targetPort: 80
