server/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "chat.gateway.veld.dev"
